Fixed press height on mobile.

--- a/styles/partials/_press.scss
+++ b/styles/partials/_press.scss
@@ -4,7 +4,6 @@
     display: block;
     position: relative;
     width: 100%;
-    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
